Added support for prepared statements.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(CPP_SRC
     src/odbc-module.cpp
     src/ODBCConnection.cpp
     src/ODBCStatement.cpp
+    src/ODBCPreparedStatement.cpp
 )
 
 set(module_name "odbc")
