Added doxygen docs generation to cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 
 project(qore-odbc-module)
-SET(PROJECT_VERSION "1.0")
+set(PROJECT_VERSION "1.0")
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
@@ -43,6 +43,10 @@ add_custom_target(QPP_GENERATED_FILES DEPENDS ${QPP_SOURCES})
 
 set(module_name "odbc")
 
+set(QORE_DOX_TMPL_SRC
+  docs/mainpage.dox.tmpl
+)
+
 add_library(${module_name} SHARED ${CPP_SRC} ${QPP_SOURCES})
 
 if (WIN32 AND MINGW AND MSYS)
@@ -59,3 +63,9 @@ qore_dist(${PROJECT_VERSION})
 
 qore_config_info()
 
+FIND_PACKAGE(Doxygen)
+if (DOXYGEN_FOUND)
+  qore_wrap_dox(QORE_DOX_SRC ${QORE_DOX_TMPL_SRC})
+  add_custom_target(QORE_MOD_DOX_FILES DEPENDS ${QORE_DOX_SRC})
+  add_dependencies(docs QORE_MOD_DOX_FILES)
+endif()
