connection string changed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,12 @@ default:
 
 variables:
   POSTGRES_PASSWORD: omq
-#  QORE_DB_CONNSTR_ODBC: 'odbc:postgres/omq@(UTF8){Driver=PostgreSQL Unicode,Server=postgres,Database=postgres}'
-  QORE_DB_CONNSTR_ODBC: 'odbc:postgres/omq@postgres(UTF8)%postgres'
+  TZ: 'Europe/Prague'
+  PGTZ: 'Europe/Prague'
+#  QORE_DB_CONNSTR_ODBC: 'odbc:postgres/omq@(UTF8){DRIVER=PostgreSQL Unicode,Server=postgres,Database=postgres}'
+#  QORE_DB_CONNSTR_ODBC: 'odbc:postgres/omq@postgres(UTF8)%postgres'
   REPO_NAME: module-odbc
+  QORE_DB_CONNSTR_PGSQL: 'pgsql:postgres/omq@postgres(UTF8)%postgres{timezone=Europe/Prague}'
 
 test-ubuntu:
   stage: test
