--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ endif (WIN32 AND MINGW AND MSYS)
 target_include_directories(${module_name} PUBLIC ${ODBC_INCLUDE_DIR})
 target_link_libraries(${module_name} ${ODBC_LIBRARIES})
 
-qore_binary_module(${module_name} ${PROJECT_VERSION})
+qore_external_binary_module(${module_name} ${PROJECT_VERSION})
 
 qore_dist(${PROJECT_VERSION})
 
@@ -71,5 +71,5 @@ FIND_PACKAGE(Doxygen)
 if (DOXYGEN_FOUND)
   qore_wrap_dox(QORE_DOX_SRC ${QORE_DOX_TMPL_SRC})
   add_custom_target(QORE_MOD_DOX_FILES DEPENDS ${QORE_DOX_SRC})
-  add_dependencies(docs QORE_MOD_DOX_FILES)
+  add_dependencies(docs-module QORE_MOD_DOX_FILES)
 endif()
