--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,10 @@ endif (WIN32 AND MINGW AND MSYS)
 target_include_directories(${module_name} PUBLIC ${ODBC_INCLUDE_DIR})
 target_link_libraries(${module_name} ${ODBC_LIBRARIES})
 
+if (DEFINED ENV{DOXYGEN_EXECUTABLE})
+    set(DOXYGEN_EXECUTABLE $ENV{DOXYGEN_EXECUTABLE})
+endif()
+
 qore_external_binary_module(${module_name} ${PROJECT_VERSION})
 
 qore_dist(${PROJECT_VERSION})
